--- a/portfolio/js/index.html
+++ b/portfolio/js/index.html
@@ -20,8 +20,8 @@
 		<title>JavaScript Knowledge Notes - S.K's Portfolio</title>
 
 		<!-- スクリプト -->
-		<script type="module" src="main.js"></script>
-		<script src="../../scripts/header_footer.js"></script>
+		<script type="module" src="main.js" defer></script>
+		<script src="../../scripts/header_footer.js" defer></script>
 	</head>
 	<body>
 		<header></header>
