--- a/portfolio/html/index.html
+++ b/portfolio/html/index.html
@@ -17,7 +17,7 @@
 		<title>HTML Knowledge Notes - S.K's Portfolio</title>
 
 		<!-- スクリプト -->
-		<script src="../../scripts/header_footer.js"></script>
+		<script src="../../scripts/header_footer.js" defer></script>
 	</head>
 	<body>
 		<header></header>
@@ -97,7 +97,7 @@
 			</section>
 
 			<section class="content__block">
-				<h3>background-image</h3>
+				<h3 id="#5">background-image</h3>
 				<p>background-imageはレイヤーで考えると分かりやすい。</p>
 				<pre><code>
 background-image:
@@ -111,11 +111,20 @@ background-size:
 			</section>
 
 			<section class="content__block">
-				<h2>flexレイアウトとgridレイアウトの違い</h2>
+				<h3 id="#6">flexレイアウトとgridレイアウトの違い</h3>
 				<p>
 					<b>flex</b>は一次元（横または縦）の並びにおいて、
 					各要素がどのように伸縮・配置されるかといった<strong>「要素の振る舞い」</strong>を指定する。
 					一方、<b>grid</b>は行と列を持つ二次元レイアウトを前提とし、<strong>「全体の構造を定義」</strong>するためのプロパティが中心となる。
+				</p>
+			</section>
+
+			<section class="content__block">
+				<h3 id="#7">リンクを滑らかにする</h3>
+				<p>transition: [秒数]s;をa:hoverに適用すると、滑らかな演出ができる。</p>
+				<p>
+					scroll-behavior:smooth;
+					は:rootやhtml要素に指定する必要がある。aタグがトリガーとなってhtml要素に動きを与えていくため、
 				</p>
 			</section>
 		</main>
