update: skills card

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 	<head>
 		<!-- メタ情報 -->
@@ -76,6 +76,10 @@
 						<li class="js card">JavaScript</li>
 						<li class="ts card">TypeScript</li>
 						<li class="sql card">SQL</li>
+						<li class="card">UI</li>
+						<li class="card">UX</li>
+						<li class="card">Figma</li>
+						<li class="card">生成AI</li>
 					</ul>
 					<h4>使用フレームワーク</h4>
 					<ul>
@@ -132,14 +136,6 @@
 							</tr>
 						</tbody>
 					</table>
-
-					<h4>勉強中のもの</h4>
-					<ul class="cards">
-						<li class="card">UI</li>
-						<li class="card">UX</li>
-						<li class="card">Figma</li>
-						<li class="card">生成AI</li>
-					</ul>
 
 					<h4>学習に使ったサイト・書籍</h4>
 					<table>
