update: カードスタイル調整, topページコンテンツ修正

--- a/index.html
+++ b/index.html
@@ -76,14 +76,39 @@
 								<li class="css">#アニメーション</li>
 							</ul>
 						</li>
-						<li class="js card">JavaScript</li>
+						<li class="js card">
+							JavaScript
+							<ul>
+								<li class="js">#DOM操作</li>
+								<li class="js">#イベント処理</li>
+								<li class="js">#非同期処理</li>
+							</ul>
+						</li>
 						<li class="ts card">TypeScript</li>
 						<li class="react card">React</li>
-						<li class="sql card">SQL</li>
+						<li class="sql card">
+							SQL
+							<ul>
+								<li class="sql">#CRUD操作</li>
+								<li class="sql">#JOIN句</li>
+								<li class="sql">#サブクエリ</li>
+							</ul>
+						</li>
 						<li class="card">UI</li>
 						<li class="card">UX</li>
-						<li class="card">Figma</li>
-						<li class="card">生成AI</li>
+						<li class="card">
+							Figma
+							<ul>
+								<li>#ワイヤーフレーム</li>
+							</ul>
+						</li>
+						<li class="card">
+							生成AI
+							<ul>
+								<li>#ChatGPT</li>
+								<li>#GitHub Copilot</li>
+							</ul>
+						</li>
 					</ul>
 				</section>
 
@@ -119,7 +144,10 @@
 						</dd>
 						<dt class="title">ブラウザ</dt>
 						<dd class="item">Google Chrome、FireFox</dd>
-						<dd class="explain"></dd>
+						<dd class="explain">
+							Google
+							ChromeはClink、FirefoxはGeckoエンジンを採用しているため、両方での動作確認を行うことでなるべく多くの環境での動作を保証できると考え採用しました。
+						</dd>
 						<dt class="title">バージョン管理</dt>
 						<dd class="item">GitHub、Git</dd>
 						<dd class="explain">
