update: タイトル変更

--- a/portfolio/contact/index.html
+++ b/portfolio/contact/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 	<head>
 		<meta charset="UTF-8" />
@@ -14,7 +14,7 @@
 		<link href="../../styles/layout/footer.css" rel="stylesheet" />
 		<link href="../../styles/pages/contactform-mockup.css" rel="stylesheet" />
 
-		<title>ContactForm_mockup - S.K's Portfolio</title>
+		<title>Contact（モックアップ） - S.K's Portfolio</title>
 
 		<script src="../../scripts/header_footer.js" defer></script>
 		<script src="../../scripts/contact-form-mockup.js" defer></script>
